# netalice

./: .gitignore  CMakeLists.txt  README.md
source/: main.c  main.h
source/tools/downloadtest/: downloadtest.c  downloadtest.h
source/tools/speedtest/: speedtest.c  speedtest.h
source/ui/: ui.c  ui.h
